<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD8DC">

    <ImageView
        android:id="@+id/pant_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/pants"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#90A4AE"
        android:textSize="20sp"
        android:padding="8dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_below="@id/pant_image"
        android:fontFamily="Times New Roman"
        android:text="@string/comp_name" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/company_name">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
            android:textSize="14sp"
                android:text="@string/comp_desc" />

        <TextView
            android:id="@+id/ourproduct_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/our_p" />

        <ImageView
            android:id="@+id/pant2_image_view"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="35dp"
            android:layout_below="@id/ourproduct_text_view"
            android:src="@drawable/pant2"/>

        <ImageView
            android:id="@+id/pant3_image_view"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_below="@id/ourproduct_text_view"
            android:layout_marginEnd="50dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/pant3"/>

        <TextView
            android:id="@+id/basic_five_pocket_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pant2_image_view"
            android:layout_marginStart="50dp"
            android:text="@string/b_five_pkt"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/chino_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pant3_image_view"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="90dp"
            android:text="@string/chino_pant"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/contact_us_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/basic_five_pocket_label"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/con_us" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_us_text_view"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/working_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_text_view"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/work_hour"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/working_hours"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColorLink="#3F51B5"
            android:autoLink="phone"
            android:text="@string/contact_phone"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:autoLink="email"
            android:textColorLink="#3F51B5"
            android:text="@string/contact_email"/>

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:autoLink="web"
            android:textColorLink="#3F51B5"
            android:text="@string/web"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
